fix: adjust gap in DotStatus component for improved layout consistency

--- a/src/components/DotStatus/DotStatus.scss
+++ b/src/components/DotStatus/DotStatus.scss
@@ -30,7 +30,7 @@
   &__content {
     display: flex;
     flex-direction: column;
-    gap: 4px;
+    gap: 0px;
   }
 
   &__text {
